<resources>
    <string name="app_name">IDapplication</string>
    <string name="person_label">Users</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="personal_inf_label">Personal information</string>
    <string name="last_name_label">Last name:</string>
    <string name="birthday_label">Birthday:</string>
    <string name="id_label">ID:</string>
    <string name="recognize_button_label">Recognize</string>
    <string name="submit_button_label">Submit</string>
    <string name="Zoom">Zoom</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="photo_tmp">Take a photo</string>
    <string name="detect_face">Detect face</string>
</resources>
