<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="0dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/full_name_textView" android:textSize="30sp"
            android:layout_marginHorizontal="10dp" android:layout_marginTop="40dp" android:textColor="#1278C7"
    />
    <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:id="@+id/view2" android:layout_marginHorizontal="10dp"/>
    <TextView
            android:text="@string/personal_inf_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:layout_marginTop="50dp" android:textSize="16sp" android:layout_marginBottom="15dp"
            android:layout_marginLeft="200dp" android:textColor="#376375"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/last_name_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_marginHorizontal="10dp"
                android:textSize="24sp"
                android:fontFamily="sans-serif-condensed" android:textAlignment="viewStart" android:textStyle="bold"
                android:textColor="#7b7b7b"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/last_name_textView" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="textStart"
                android:textColor="#3D4D58"/>
    </LinearLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:id="@+id/view3" android:layout_marginHorizontal="10dp" android:layout_marginBottom="20dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/birthday_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_marginHorizontal="10dp"
                android:textSize="24sp"
                android:fontFamily="sans-serif-condensed" android:textStyle="bold" android:textColor="#7b7b7b"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/birthday_textView" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="textStart"
                android:textColor="#033A64"/>
    </LinearLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:id="@+id/view4" android:layout_marginHorizontal="10dp" android:layout_marginBottom="20dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/id_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_marginHorizontal="10dp"
                android:textSize="24sp"
                android:fontFamily="sans-serif-condensed" android:textStyle="bold" android:textColor="#7b7b7b"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/id_textView" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="textStart"
                android:textColor="#033A64"/>
    </LinearLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:id="@+id/view5" android:layout_marginHorizontal="10dp"/>
</LinearLayout>